boulder/boulder/tests/compile_fail/attr/test_invalid.bo
# Invalid `test` function
# (4:
@test
fn test(a: u32) -> Bool {
    a == 0
}